create endpoints for event module with source material filter
